# bulletproof

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: daily-cron.yml  deploy-web.yml  swap-activity.yml
.superpowers/sdd/: daily-cron-final-review.md  engine-productionization-final-review.md  healthkit-sync-final-review.md  mobile-bootstrap-final-review.md  recommendation-ui-final-review.md  web-dashboard-final-review.md
apps/mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
apps/web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
docs/: BACKLOG.md
engine/: README.md  daily_feedback_repo.py  env_loader.py  exercise_catalog_repo.py  oura_client.py  profile_repo.py  program_builder.py  program_prompt.py  pyproject.toml  rationale.py  recovery_repo.py  run_daily.py  scoring.py  sessions_repo.py  supabase_client.py  swap_activity.py  weather_client.py
engine/tests/: conftest.py  test_env_loader.py  test_exercise_catalog.py  test_exercise_catalog_repo.py  test_profile_repo.py  test_program_builder.py  test_program_prompt.py  test_rationale.py  test_recovery_repo.py  test_run_daily.py  test_scoring.py  test_sessions_repo.py  test_supabase_client.py  test_swap_activity.py  test_weather_client.py
prototyping/weight-tuning/: README.md  build_session_candidates.py  load_sessions.py  oura_explore.py  oura_pull.py  requirements.txt  scoring.py  test_scoring.py  weight_tuning.py
scripts/: generate_apple_oauth_secret.js  verify_schema.sh
supabase/: config.toml
(+151 files in other folders)
